# backendscaffold

./: .gitignore  README.md  credentials.json  frontend.code-workspace  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yaml
prisma/: schema.prisma
src/: __init__.py  config.py
src/hooks/: __init__.py  components.py  helpers.py  utils.py
src/router/: __init__.py  router.py  storage.py
src/service/: auth.py  cloud.py
tests/: test_main.py
tests/benchmark/: perf_report.py
